--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,7 @@
     display: flex;
     flex-direction: row;
     background-color: white;
+    text-decoration: none;
 }
 
 
@@ -74,6 +75,29 @@
     width: 150px !important;
     height: 100% !important;
 }
+.navbar-nav{
+    
+    display: flex !important;
+    flex-direction: row;
+    gap: 20px;
+}
+.navbar-nav a{
+    text-decoration: none;
+    color: #000;
+}
+.navbar-nav .dropdown a{
+    text-decoration: none;
+    color: #000;
+    padding: 0;
+}
+.dropdown-toggle::after a{
+    padding-left: 5px;
+}
+.offcanvas-body{
+    display: flex;
+    align-items: center;
+}
+
 
 
 .offcanvas-body .icon-list {
@@ -346,6 +370,7 @@
     flex-flow: row;
     font-size: 13px;
     justify-content: space-between;
+
     border-bottom: 1px solid #DEE2E7;
     padding-bottom: 10px;
 }
@@ -615,24 +640,29 @@
     font-size: 14px;
 }
 
-.products .nav-item {
-    font-size: 14px;
-}
 
-.products .filter-list {
-    display: flex;
-    gap: 30px;
-}
+.filtter:focus-visible {
+    outline: transparent !important;
 
-.products .price-list {
+}
+.filtter1{
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    border: 1px solid none;
-    background-color: #FFF;
-    padding: 5px 15px;
+    border: 1px solid transparent;
+    background-color: #fff;
+    align-items: center;
+    gap: 10px;
+    padding: 5px 10px;
 }
-
+.filtter1 h4{
+    font-size: 14px;
+    font-weight: 600;
+    margin: 0;
+}
+.filtter1 select{
+    font-size: 12px;
+    font-weight: 400;
+}
 .products .short {
     display: flex;
     flex-direction: row;
@@ -2040,6 +2070,7 @@
 /* order page start */
 
 .filter {
+
     display: flex;
     flex-direction: column;
     padding: 25px 15px;
@@ -2132,7 +2163,7 @@
 }
 
 .status_del {
-    width: 158px;
+    width: 162px;
 }
 
 .status_del .status_color {
@@ -2201,6 +2232,10 @@
     border: 1px solid #BDC4CD;
     padding: 20px 20px;
     border-radius: 15px;
+}
+.address_add{
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .address .add_txt p {
